2005-01-19  Jonathan Pryor  <jonpryor@vt.edu>

	* UriTest.cs: Ignore one of the tests on Linux, as .NET's behavior is
	  counterintuitive (see the UnixLocalPath_WTF comment).

2005-01-08  Nick Drochak  <ndrochak@ieee.org>

	* UriTest.cs
	* UriTest2.cs: Make pass on MS.NET

2004-06-22  Atsushi Enomoto  <atsushi@ximian.com>

	* UriTest.cs : As Unix paths, //foo/bar never means host == foo,
	  file path == /bar. So on *nix environment, interpret LocalPath of
	  file://foo/bar as /bar, not //foo/bar.
	* test-uri-list.txt, tset-uri-props.txt : We cannot test such path
	  that starts with "//" in automatic one, since on Windows it is
	  UNC host name but on Unix it is condensed to /foo style abs path.
	* UriTest2.cs : Test only on windows such path that starts with "\\".

2004-06-16  Atsushi Enomoto  <atsushi@ximian.com>

	* test-uri-list.txt, test-uri-props.txt, test-uri-props-manual.txt :
	  The autogenerated test contained Unix path case. Moved to manual.

2004-06-16  Atsushi Enomoto  <atsushi@ximian.com>

	* UriTest2.cs : LocalPath values should vary depending on the running
	  environment - so replace '/' and '\\' each other.

2004-06-11  Atsushi Enomoto  <atsushi@ximian.com>

	* UriTest.cs : Added UnixLocalPath().

2004-06-11  Atsushi Enomoto  <atsushi@ximian.com>

	* UriTest.cs : Added InvalidScheme().
	* test-uri-list.txt, test-uri-props.txt :
	  Commented out RFC2396-violent URIs.

2004-06-11  Atsushi Enomoto  <atsushi@ximian.com>

	* test-uri-list.txt,
	  test-uri-props.txt,
	  test-uri-props-manual.txt :
	  Reverted the last change. File URI handling should be common to 
	  MS.NET. We have to change the behavior only for Unix file path.
	* UriTest2.cs : Fixed just catch only UriFormatException.

2004-06-10  Atsushi Enomoto  <atsushi@ximian.com>

	* UriTest.cs : Should not expect exception for Unix file path.

2004-06-10  Atsushi Enomoto  <atsushi@ximian.com>

	* test-uri-list.txt,
	  test-uri-props.txt,
	  test-uri-props-manual.txt :